@@ -145,6 +145,11 @@ BUG FIXES
 
     o	The predict() method for prcomp() had an incorrect check for
 	the number of columns of 'newdata' if the columns were not named.
+	
+    o	The axis() function now distinguishes between setting "at" to
+	NULL or a zero-length vector, treating the latter as a request
+	for no ticks.  This corrects the handling of the "x" parameter
+	to rug().
 
     o	glob2rx("*[*") now produces a correct regular expression.
 
